<resources>
    <string name="app_name">Калькулятор шашлыка</string>


    <string name="yandex_banner_id_test" translatable="false">R-M-DEMO-320x50</string>
    <string name="yandex_banner_id" translatable="false">R-M-1619549-1</string>

    <string name="yandex_interstitial_id_test" translatable="false">R-M-DEMO-interstitial</string>
    <string name="yandex_interstitial_id" translatable="false">R-M-1619549-2</string>


    <string name="main_title_text_choose">Листай-Выбирай:</string>
    <string name="measuring_btn">Рассчитать</string>
    <string name="no_result">Нечем поделиться…</string>
    <string name="res_saved">Сохранено</string>
    <string name="res_loaded">Загружено</string>

    <string name="title_item_rctop">Расчёт мяса</string>
    <string name="title_item_rctop_alco">Расчёт алкоголя</string>

    <string name="title_column1">Какое мясо?</string>
    <string name="all_meat">\ Разное</string>
    <string name="fish">\ Рыба</string>
    <string name="chicken">\ Курица</string>
    <string name="pig">\ Свинина</string>
    <string name="muu">\ Говядина</string>

    <string name="fishs">\ Рыбы</string>
    <string name="chickens">\ Курицы</string>
    <string name="pigs">\ Свинины</string>
    <string name="muus">\ Говядины</string>

    <string name="kg">\ Килограмм</string>
    <string name="gramm">\ грамм</string>

    <string name="title_column1_alco">Какой Алкоголь?</string>
    <string name="all_alco">\ Разный</string>
    <string name="bear">\ Пиво</string>
    <string name="vine">\ Вино</string>
    <string name="vodka">\ Крепкие</string>

    <string name="bears">\ Пива</string>
    <string name="vines">\ Вина</string>
    <string name="vodkas">\ Крепкого</string>

    <string name="litrs">\ Литров</string>


    <string name="bread">Хлеб</string>
    <string name="breads">\ Хлеба</string>

    <string name="vegetable">Овощи</string>
    <string name="vegetables">\ Овощей</string>

    <string name="bottles">\ бутылок</string>


    <string name="title_column2">Как долго?</string>
    <string name="time_low">Посидим–поедим(2-3 часа)</string>
    <string name="time_med">Отдохнем (4-6 часов)</string>
    <string name="time_max">Зажгём (7-10 часов)</string>
    <string name="time_over">Пока мангал не развалится(Сутки)</string>

    <string name="title_column2_alco">Уровень опьянения?</string>
    <string name="alco_low">Посидеть поговорить</string>
    <string name="alco_med">Выпить потанцевать</string>
    <string name="alco_max">Напиться и пошуметь</string>
    <string name="alco_over">Очнуться только завтра</string>

    <string name="people_count">Количество человек</string>

    <string name="RESULT_DESC_ITOGO1">Итого на \ </string>
    <string name="RESULT_DESC_ITOGO2">\ понадобиться: </string>
    <string name="RESULT_DESC_ITOGO2_1">\ понадобиться </string>
    <string name="RESULT_DESC_ITOGO_people">\ человека</string>
    <string name="RESULT_DESC_ITOGO_peoples">\ человек</string>

    <string name="RESULT_DESC_ITOGO3_meat">\ мяса</string>
    <string name="RESULT_DESC_ITOGO3_alco">\ алкоголя</string>
    <string name="RESULT_DESC_ITOGO3_1_alco">\ алкоголя:</string>


    <string name="btn_save">Сохранить</string>
    <string name="btn_load">Загрузить</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_clear_res">Сброс</string>
    <string name="link_on_app">\n http://googleplay.com</string>


    <string name="desc_meat">Расчёт мяса производится с учётом ужарки для разных видов мяса. Из расчёта: 300–400 грамм порция.</string>
    <string name="desc_alco">Расчёт алкоголя производится из расчёта на человека нормально восприимчивого к алкоголю и для опьянения до нужной стадии, без продолжения. \n
        Если собираетесь поддерживать кондицию - учитывайте это при планировании отдыха.  </string>

    <string name="share_text_1">Расчёт мяса и алкоголя в приложении : </string>

</resources>
