<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Расчёт мяса"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/left_radio_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Какое мясо?"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"/>

                    <RadioButton
                        android:id="@+id/l_radio_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/meatall"
                        android:text="@string/all_meat"/>

                    <RadioButton
                        android:id="@+id/l_radio_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chicken"
                        android:drawableStart="@drawable/chicken1"/>

                    <RadioButton
                        android:id="@+id/l_radio_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pig"
                        android:drawableStart="@drawable/pig1"/>

                    <RadioButton
                        android:id="@+id/l_radio_4"
                        android:drawableStart="@drawable/muu1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/muu" />
                </RadioGroup>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/right_radio_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Как долго?"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"/>

                    <RadioButton
                        android:id="@+id/r_radio_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_low"
                        />

                    <RadioButton
                        android:id="@+id/r_radio_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_med" />

                    <RadioButton
                        android:id="@+id/r_radio_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_max" />

                    <RadioButton
                        android:id="@+id/r_radio_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_over" />
                </RadioGroup>

            </LinearLayout>
            <EditText
                android:id="@+id/et_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_count" />

            <Button
                android:id="@+id/btn_test_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal"
                android:text="@string/measuring_btn"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>